# matval

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
config/: currency_aliases.json
db/: 02-seed-stores.sql  03-history-trigger.sql  schema.sql  seed-supermarkets.sql
matval_core/: pyproject.toml
matval_core/src/matval_core/: __init__.py
matval_core/src/matval_core/db/: config.py  connector.py  schema.sql
reports/: coverage.json
scrape_supermarket_websites/: Dockerfile  entrypoint.sh
scrape_supermarket_websites/coop/: pyproject.toml
scrape_supermarket_websites/coop/scraper/: scrapy.cfg
scrape_supermarket_websites/coop/scraper/coop_scraper/: items.py  middlewares.py  pipelines.py  settings.py
scrape_supermarket_websites/coop/scraper/coop_scraper/data/: coop_category_ids.json
scrape_supermarket_websites/coop/scraper/coop_scraper/spiders/: coop_spider.py
scrape_supermarket_websites/hemkop/: pyproject.toml
scrape_supermarket_websites/hemkop/scraper/: scrapy.cfg
scrape_supermarket_websites/hemkop/scraper/hemkop_scraper/: items.py  middlewares.py  pipelines.py  settings.py
scrape_supermarket_websites/hemkop/scraper/hemkop_scraper/spiders/: hemkop_spider.py
scrape_supermarket_websites/ica/: pyproject.toml  requirements.txt
scrape_supermarket_websites/ica/scraper/: scrapy.cfg
scrape_supermarket_websites/ica/scraper/ica_scraper/: items.py  middlewares.py  pipelines.py  settings.py
scrape_supermarket_websites/ica/scraper/ica_scraper/spiders/: ica_spider.py
scrape_supermarket_websites/mathem/: pyproject.toml
scrape_supermarket_websites/mathem/scraper/: scrapy.cfg
scrape_supermarket_websites/mathem/scraper/mathem/: items.py  middlewares.py  pipelines.py  settings.py
scrape_supermarket_websites/mathem/scraper/mathem/spiders/: mathem_spider.py
scrape_supermarket_websites/matval_pipeline/: pyproject.toml
scrape_supermarket_websites/matval_pipeline/matval_pipeline/: __init__.py  config.py  connector.py  db_ops.py  normalizers.py  pipeline.py
scrape_supermarket_websites/matval_pipeline/matval_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scrape_supermarket_websites/matval_pipeline/src/matval_pipeline/: db_ops.py  normalizers.py  pipeline.py
scrape_supermarket_websites/matval_pipeline/tests/: conftest.py  test_config.py  test_connector.py  test_db_ops.py  test_pipeline.py
scrape_supermarket_websites/willys/: pyproject.toml
scrape_supermarket_websites/willys/scraper/: scrapy.cfg
scrape_supermarket_websites/willys/scraper/willys/: items.py  middlewares.py  pipelines.py  settings.py
scrape_supermarket_websites/willys/scraper/willys/spiders/: willys_spider.py
shelfwatch/: Dockerfile  client-config.json  pyproject.toml
shelfwatch/src/shelfwatch/: __init__.py  server.py
tests/: conftest.py
tests/matval_core/: test_config.py  test_connector.py
tests/matval_pipeline/: test_db_ops.py  test_normalizers.py  test_pipeline.py
tests/shelfwatch/: conftest.py  test_server.py  test_server_config.py  test_server_pricing.py  test_server_products.py  test_server_search.py  test_server_stores.py
