[project]
name = "matval"
version = "0.7.1"
requires-python = ">=3.13"
description = "matval (food choice) is a supermarket item procurement and natural-language retrieval project"
authors = [
    {name = "Calin-Andrei Rasiga", email = "rasigacalin@gmail.com"}
]
dependencies = [
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-cov", "testcontainers[postgres]", "commitizen", "pre-commit", "psycopg", "itemadapter"]

[tool.uv.workspace]
members = [
    "matval_core",
    "scrape_supermarket_websites/coop",
    "scrape_supermarket_websites/hemkop",
    "scrape_supermarket_websites/ica",
    "scrape_supermarket_websites/mathem",
    "scrape_supermarket_websites/matval_pipeline",
    "scrape_supermarket_websites/willys",
    "shelfwatch",
]

[tool.ruff]

#Global rules
line-length = 120
indent-width = 4
target-version = "py313"

exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

#Linter

[tool.ruff.lint]
select = [
    # Pycodestyle (PEP8 style)
    "E",
    # Pyflakes (Undefined names, unused imports)
    "F",
    # Pyupgrade (Modern Syntax)
    "UP",
    # Naming conventions (pep8)
    "N",
    # Import sorting (isort)
    "I",
    # Security (bandit)
    "S",
    # Detect print() statements
    "T20",
    # Pytest style
    "PT"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.13"
strict = true

#Excluding scrapy as it is a third-party package as I don't know the code within it
[[tool.mypy.overrides]]
module = "scrapy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["testcontainers", "testcontainers.*", "testcontainers.postgres"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.conftest"
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]

#These settings are kept as default, but they are subject to potential change
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    --cov=matval_pipeline
    --cov=shelfwatch
    --cov-report=term-missing
    --cov-fail-under=80
    --cov-report=json:reports/coverage.json
"""

[tool.commitizen]
name = "cz_conventional_commits"
tag = true
version_provider = "pep621" # This tells commitizen to update the version at the top
tag_format = "v$version"
update_changelog_on_bump = true
