[build-system]
requires = ["uv_build>=0.5.15"]
build-backend = "uv_build"

[project]
name = "shelfwatch"
version = "0.1.0"
description = "MCP server for querying supermarket food data from PostgreSQL"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "matval-core",
    "python-dotenv>=1.0.0",
]

[project.scripts]
shelfwatch = "shelfwatch.server:main"

[dependency-groups]
dev = []

[tool.uv.sources]
matval-core = { workspace = true }

[tool.uv.build-backend]
source = "src"
